--- a/cms-api/package.json
+++ b/cms-api/package.json
@@ -25,7 +25,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.1"
   }
 }
