--- a/cms-api/package.json
+++ b/cms-api/package.json
@@ -24,7 +24,9 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
     "swagger-jsdoc": "^4.0.0",
