--- a/cms-api/package.json
+++ b/cms-api/package.json
@@ -24,8 +24,17 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "@admin-bro/express": "^3.0.0",
+    "@admin-bro/mongoose": "^1.0.0",
+    "admin-bro": "^3.1.2",
+    "admin-bro-expressjs": "^2.1.1",
+    "admin-bro-mongoose": "^0.5.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.1",
     "http-errors": "^1.8.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
